# ca-designer

./: Cargo.toml
ca-tui/: Cargo.toml
ca-tui/src/: app.rs  main.rs  messages.rs  simulation.rs
ca-tui/src/tab/: graphviz_tab.rs  mod.rs  model_tab.rs  simulation_tab.rs
ca-tui/src/tab/graphviz_tab/: mod.rs
ca-tui/src/tab/model_tab/: add_node.rs  mod.rs
ca-tui/src/widgets/: mod.rs  navbar.rs  stateful_modal.rs
libca/: Cargo.toml
libca/fixtures/gol/: glider.txt
libca/src/: lib.rs  simulation.rs  state_map.rs
libca/src/grid/: mod.rs  neighbor_strategy.rs  test_utils.rs
libca/src/model/: edge.rs  mod.rs  node.rs  test_utils.rs
libca/src/model/snapshots/: libca__model__tests__model_serialization.snap
libca/src/snapshots/: libca__simulation__tests__gol_block_should_remain.snap  libca__simulation__tests__gol_glider_should_move_and_cycle.snap  libca__simulation__tests__horizontal.snap  libca__simulation__tests__vertical.snap
