[package]
name = "ca-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
strum.workspace = true
crossterm = { version = "0.28.1", features = ["event-stream", "events"], default-features = false }
libca.workspace = true
ratatui = "0.29.0"
ratatui-image = { version = "4.2.0", default-features = false, features = ["crossterm"] }
image = { version = "0.25.5", default-features = false, features = ["bmp", "png"] }
dot = "0.1.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3.31"
